<resources>
    <string name="app_name">Top</string>
    <string name="action_settings">Settings</string>
    <string name="proplayer_hint_nombre">Nombre</string>
    <string name="proplayer_hint_orden">Orden</string>
    <string name="proplayer_hint_apellidos">Apellidos</string>
    <string name="proplayer_hint_fechaNacimiento">Fecha de Nacimiento</string>
    <string name="proplayer_hint_Estatura">Estatura(cm)</string>
    <string name="proplayer_hint_lugarnacimiento">Lugar de Nacimiento</string>
    <string name="proplayer_hint_notas">Notas</string>

</resources>
