<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    tools:context=".AddProplayerActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivImgFoto"
                android:background="@android:color/darker_gray"
                android:src="@drawable/ic_photo_size_select_actual_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/AppTheme_ImageViewButton"
                    android:id="@+id/ivImgDeletePhoto"
                    android:src="@drawable/close_box"/>
                <android.support.v7.widget.AppCompatImageView
                    style="@style/AppTheme_ImageViewButton"
                    android:id="@+id/ivImgFromGalery"
                    android:src="@drawable/ic_image"/>
                <android.support.v7.widget.AppCompatImageView
                    style="@style/AppTheme_ImageViewButton"
                    android:id="@+id/ivImageFromUrl"
                    android:src="@drawable/earth_box"/>

            </LinearLayout>
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="@integer/nombre_maxlenght"
                android:hint="@string/proplayer_hint_nombre"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="@integer/nombre_maxlenght"
                android:hint="@string/proplayer_hint_apellidos"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etFechaNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/proplayer_hint_fechaNacimiento"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEstatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/proplayer_hint_Estatura"
                    android:inputType="number"
                    android:maxLength="@integer/estatura_maxlenght"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLugardeNacimiento"
                android:hint="@string/proplayer_hint_lugarnacimiento"
                android:layout_width="match_parent"
                android:inputType="textAutoComplete"
                android:maxLength="@integer/lugarNacimiento_maxlenght"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNotas"
                android:hint="@string/proplayer_hint_notas"
                android:layout_width="match_parent"
                android:inputType="textAutoComplete"
                android:gravity="top|start"
                android:maxLength="@integer/notas_maxlenght"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>